--- a/main.tf.example
+++ b/main.tf.example
@@ -1,19 +1,64 @@
-module "gcp_multi_node" {
+variable "project_prefix" {
+  type        = string
+  description = "prefix string put in front of string"
+  default     = "f5xc"
+}
+
+variable "project_suffix" {
+  type        = string
+  description = "prefix string put at the end of string"
+  default     = "01"
+}
+
+variable "f5xc_api_p12_file" {
+  type    = string
+}
+
+variable "f5xc_api_url" {
+  type    = string
+}
+
+variable "f5xc_tenant" {
+  type    = string
+}
+
+module "gcp_multi_node_single_nic" {
   source                            = "./modules/f5xc/site/gcp"
-  f5xc_api_p12_file                 = "cert/api-creds.p12"
-  f5xc_api_url                      = "https://playground.staging.volterra.us/api"
+  f5xc_api_p12_file                 = var.f5xc_api_p12_file
+  f5xc_api_url                      = var.f5xc_api_url
   f5xc_namespace                    = "system"
-  f5xc_tenant                       = "playground"
+  f5xc_tenant                       = var.f5xc_tenant
   f5xc_gcp_cred                     = "gcp-01"
-  f5xc_gcp_ce_gw_type               = "multi_nic"
+  f5xc_gcp_ce_gw_type               = "single_nic"
   f5xc_gcp_default_ce_sw_version    = true
-  f5xc_gcp_default_os_version       = true
+  f5xc_gcp_default_ce_os_version    = true
   f5xc_gcp_inside_primary_ipv4      = "192.168.169.0/24"
   f5xc_gcp_outside_primary_ipv4     = "192.168.168.0/24"
   f5xc_gcp_node_number              = 3
   f5xc_gcp_project_id               = "gcp_project_id"
   f5xc_gcp_region                   = "us-east1"
-  f5xc_gcp_site_name                = "gcp-multi-node-01"
+  f5xc_gcp_site_name                = format("%s-gcp-multi-single-nic-node-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names               = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services = true
+  public_ssh_key                    = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_multi_nic" {
+  source                            = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                 = var.f5xc_api_p12_file
+  f5xc_api_url                      = var.f5xc_api_url
+  f5xc_namespace                    = "system"
+  f5xc_tenant                       = var.f5xc_tenant
+  f5xc_gcp_cred                     = "gcp-01"
+  f5xc_gcp_ce_gw_type               = "multi_nic"
+  f5xc_gcp_default_ce_sw_version    = true
+  f5xc_gcp_default_ce_os_version    = true
+  f5xc_gcp_inside_primary_ipv4      = "192.168.169.0/24"
+  f5xc_gcp_outside_primary_ipv4     = "192.168.168.0/24"
+  f5xc_gcp_node_number              = 3
+  f5xc_gcp_project_id               = "gcp_project_id"
+  f5xc_gcp_region                   = "us-east1"
+  f5xc_gcp_site_name                = format("%s-gcp-multi-node-multi-nic-%s", var.project_prefix, var.project_suffix)
   f5xc_gcp_zone_names               = ["us-east1-b"]
   f5xc_gcp_default_blocked_services = true
   public_ssh_key                    = "ssh-rsa xyz"
