--- a/main.tf.example
+++ b/main.tf.example
@@ -32,8 +32,6 @@ module "gcp_multi_node_single_nic" {
   f5xc_gcp_ce_gw_type               = "single_nic"
   f5xc_gcp_default_ce_sw_version    = true
   f5xc_gcp_default_ce_os_version    = true
-  f5xc_gcp_inside_primary_ipv4      = "192.168.169.0/24"
-  f5xc_gcp_outside_primary_ipv4     = "192.168.168.0/24"
   f5xc_gcp_node_number              = 3
   f5xc_gcp_project_id               = "gcp_project_id"
   f5xc_gcp_region                   = "us-east1"
@@ -41,6 +39,92 @@ module "gcp_multi_node_single_nic" {
   f5xc_gcp_zone_names               = ["us-east1-b"]
   f5xc_gcp_default_blocked_services = true
   public_ssh_key                    = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_single_nic_new_network_new_subnet" {
+  source                            = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                 = var.f5xc_api_p12_file
+  f5xc_api_url                      = var.f5xc_api_url
+  f5xc_namespace                    = "system"
+  f5xc_tenant                       = var.f5xc_tenant
+  f5xc_gcp_cred                     = "gcp-01"
+  f5xc_gcp_ce_gw_type               = "single_nic"
+  f5xc_gcp_default_ce_sw_version    = true
+  f5xc_gcp_default_ce_os_version    = true
+  f5xc_gcp_local_primary_ipv4       = "192.168.169.0/24"
+  f5xc_gcp_local_network_name       = "networkA"
+  f5xc_gcp_local_subnet_name        = "subnetA"
+  f5xc_gcp_node_number              = 3
+  f5xc_gcp_project_id               = "gcp_project_id"
+  f5xc_gcp_region                   = "us-east1"
+  f5xc_gcp_site_name                = format("%s-gcp-multi-single-nic-node-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names               = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services = true
+  public_ssh_key                    = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_single_nic_auto_network_new_subnet" {
+  source                            = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                 = var.f5xc_api_p12_file
+  f5xc_api_url                      = var.f5xc_api_url
+  f5xc_namespace                    = "system"
+  f5xc_tenant                       = var.f5xc_tenant
+  f5xc_gcp_cred                     = "gcp-01"
+  f5xc_gcp_ce_gw_type               = "single_nic"
+  f5xc_gcp_default_ce_sw_version    = true
+  f5xc_gcp_default_ce_os_version    = true
+  f5xc_gcp_local_primary_ipv4       = "192.168.169.0/24"
+  f5xc_gcp_local_subnet_name        = "subnetA"
+  f5xc_gcp_node_number              = 3
+  f5xc_gcp_project_id               = "gcp_project_id"
+  f5xc_gcp_region                   = "us-east1"
+  f5xc_gcp_site_name                = format("%s-gcp-multi-single-nic-node-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names               = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services = true
+  public_ssh_key                    = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_single_nic_existing_network_new_subnet" {
+  source                               = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                    = var.f5xc_api_p12_file
+  f5xc_api_url                         = var.f5xc_api_url
+  f5xc_namespace                       = "system"
+  f5xc_tenant                          = var.f5xc_tenant
+  f5xc_gcp_cred                        = "gcp-01"
+  f5xc_gcp_ce_gw_type                  = "single_nic"
+  f5xc_gcp_default_ce_sw_version       = true
+  f5xc_gcp_default_ce_os_version       = true
+  f5xc_gcp_local_primary_ipv4          = "192.168.169.0/24"
+  f5xc_gcp_existing_local_network_name = "networkA"
+  f5xc_gcp_local_subnet_name           = "subnetA"
+  f5xc_gcp_node_number                 = 3
+  f5xc_gcp_project_id                  = "gcp_project_id"
+  f5xc_gcp_region                      = "us-east1"
+  f5xc_gcp_site_name                   = format("%s-gcp-multi-single-nic-node-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names                  = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services    = true
+  public_ssh_key                       = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_single_nic_existing_network_existing_subnet" {
+  source                               = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                    = var.f5xc_api_p12_file
+  f5xc_api_url                         = var.f5xc_api_url
+  f5xc_namespace                       = "system"
+  f5xc_tenant                          = var.f5xc_tenant
+  f5xc_gcp_cred                        = "gcp-01"
+  f5xc_gcp_ce_gw_type                  = "single_nic"
+  f5xc_gcp_default_ce_sw_version       = true
+  f5xc_gcp_default_ce_os_version       = true
+  f5xc_gcp_existing_local_network_name = "networkA"
+  f5xc_gcp_existing_local_subnet_name  = "subnetA"
+  f5xc_gcp_node_number                 = 3
+  f5xc_gcp_project_id                  = "gcp_project_id"
+  f5xc_gcp_region                      = "us-east1"
+  f5xc_gcp_site_name                   = format("%s-gcp-multi-single-nic-node-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names                  = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services    = true
+  public_ssh_key                       = "ssh-rsa xyz"
 }
 
 module "gcp_multi_node_multi_nic" {
@@ -53,8 +137,6 @@ module "gcp_multi_node_multi_nic" {
   f5xc_gcp_ce_gw_type               = "multi_nic"
   f5xc_gcp_default_ce_sw_version    = true
   f5xc_gcp_default_ce_os_version    = true
-  f5xc_gcp_inside_primary_ipv4      = "192.168.169.0/24"
-  f5xc_gcp_outside_primary_ipv4     = "192.168.168.0/24"
   f5xc_gcp_node_number              = 3
   f5xc_gcp_project_id               = "gcp_project_id"
   f5xc_gcp_region                   = "us-east1"
@@ -62,4 +144,102 @@ module "gcp_multi_node_multi_nic" {
   f5xc_gcp_zone_names               = ["us-east1-b"]
   f5xc_gcp_default_blocked_services = true
   public_ssh_key                    = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_multi_nic_new_network_new_subnet" {
+  source                            = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                 = var.f5xc_api_p12_file
+  f5xc_api_url                      = var.f5xc_api_url
+  f5xc_namespace                    = "system"
+  f5xc_tenant                       = var.f5xc_tenant
+  f5xc_gcp_cred                     = "gcp-01"
+  f5xc_gcp_ce_gw_type               = "multi_nic"
+  f5xc_gcp_default_ce_sw_version    = true
+  f5xc_gcp_default_ce_os_version    = true
+  f5xc_gcp_inside_primary_ipv4      = "192.168.169.0/24"
+  f5xc_gcp_outside_primary_ipv4     = "192.168.168.0/24"
+  f5xc_gcp_outside_network_name     = "outside_networkA"
+  f5xc_gcp_inside_network_name      = "inside_networkA"
+  f5xc_gcp_outside_subnet_name      = "outside_subnetA"
+  f5xc_gcp_inside_subnet_name       = "inside_subnetA"
+  f5xc_gcp_node_number              = 3
+  f5xc_gcp_project_id               = "gcp_project_id"
+  f5xc_gcp_region                   = "us-east1"
+  f5xc_gcp_site_name                = format("%s-gcp-multi-node-multi-nic-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names               = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services = true
+  public_ssh_key                    = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_multi_nic_auto_new_network_new_subnet" {
+  source                            = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                 = var.f5xc_api_p12_file
+  f5xc_api_url                      = var.f5xc_api_url
+  f5xc_namespace                    = "system"
+  f5xc_tenant                       = var.f5xc_tenant
+  f5xc_gcp_cred                     = "gcp-01"
+  f5xc_gcp_ce_gw_type               = "multi_nic"
+  f5xc_gcp_default_ce_sw_version    = true
+  f5xc_gcp_default_ce_os_version    = true
+  f5xc_gcp_inside_primary_ipv4      = "192.168.169.0/24"
+  f5xc_gcp_outside_primary_ipv4     = "192.168.168.0/24"
+  f5xc_gcp_outside_subnet_name      = "outside_subnetA"
+  f5xc_gcp_inside_subnet_name       = "inside_subnetA"
+  f5xc_gcp_node_number              = 3
+  f5xc_gcp_project_id               = "gcp_project_id"
+  f5xc_gcp_region                   = "us-east1"
+  f5xc_gcp_site_name                = format("%s-gcp-multi-node-multi-nic-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names               = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services = true
+  public_ssh_key                    = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_multi_nic_existing_network_new_subnet" {
+  source                                 = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                      = var.f5xc_api_p12_file
+  f5xc_api_url                           = var.f5xc_api_url
+  f5xc_namespace                         = "system"
+  f5xc_tenant                            = var.f5xc_tenant
+  f5xc_gcp_cred                          = "gcp-01"
+  f5xc_gcp_ce_gw_type                    = "multi_nic"
+  f5xc_gcp_default_ce_sw_version         = true
+  f5xc_gcp_default_ce_os_version         = true
+  f5xc_gcp_inside_primary_ipv4           = "192.168.169.0/24"
+  f5xc_gcp_outside_primary_ipv4          = "192.168.168.0/24"
+  f5xc_gcp_existing_inside_network_name  = "inside_networkA"
+  f5xc_gcp_existing_outside_network_name = "outside_networkA"
+  f5xc_gcp_outside_subnet_name           = "outside_subnetA"
+  f5xc_gcp_inside_subnet_name            = "inside_subnetA"
+  f5xc_gcp_node_number                   = 3
+  f5xc_gcp_project_id                    = "gcp_project_id"
+  f5xc_gcp_region                        = "us-east1"
+  f5xc_gcp_site_name                     = format("%s-gcp-multi-node-multi-nic-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names                    = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services      = true
+  public_ssh_key                         = "ssh-rsa xyz"
+}
+
+module "gcp_multi_node_multi_nic_existing_network_existing_subnet" {
+  source                                 = "./modules/f5xc/site/gcp"
+  f5xc_api_p12_file                      = var.f5xc_api_p12_file
+  f5xc_api_url                           = var.f5xc_api_url
+  f5xc_namespace                         = "system"
+  f5xc_tenant                            = var.f5xc_tenant
+  f5xc_gcp_cred                          = "gcp-01"
+  f5xc_gcp_ce_gw_type                    = "multi_nic"
+  f5xc_gcp_default_ce_sw_version         = true
+  f5xc_gcp_default_ce_os_version         = true
+  f5xc_gcp_inside_primary_ipv4           = "192.168.169.0/24"
+  f5xc_gcp_outside_primary_ipv4          = "192.168.168.0/24"
+  f5xc_gcp_existing_inside_network_name  = "inside_networkA"
+  f5xc_gcp_existing_outside_network_name = "outside_networkA"
+  f5xc_gcp_existing_outside_subnet_name  = "outside_subnetA"
+  f5xc_gcp_existing_inside_subnet_name   = "inside_subnetA"
+  f5xc_gcp_node_number                   = 3
+  f5xc_gcp_project_id                    = "gcp_project_id"
+  f5xc_gcp_region                        = "us-east1"
+  f5xc_gcp_site_name                     = format("%s-gcp-multi-node-multi-nic-%s", var.project_prefix, var.project_suffix)
+  f5xc_gcp_zone_names                    = ["us-east1-b"]
+  f5xc_gcp_default_blocked_services      = true
+  public_ssh_key                         = "ssh-rsa xyz"
 }
