--- a/.github/workflows/module_test.yml
+++ b/.github/workflows/module_test.yml
@@ -87,15 +87,14 @@ jobs:
       - name: Terraform Plan
         id: plan
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           VES_P12_PASSWORD: ${{ secrets.VES_P12_PASSWORD }}
           TF_VAR_f5xc_api_url: ${{ secrets.f5xc_api_url }}
           TF_VAR_f5xc_api_p12_file: ${{ secrets.f5xc_api_p12_file }}
           TF_VAR_f5xc_api_token: ${{ secrets.f5xc_api_token }}
-          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
           TF_VAR_f5xc_tenant: ${{ secrets.F5XC_TENANT }}
+          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_gcp_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
         run: terraform plan -no-color
         continue-on-error: false
       - name: Cleanup environment
@@ -145,8 +144,6 @@ jobs:
       - name: Terraform Apply
         id: apply
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           VES_P12_PASSWORD: ${{ secrets.VES_P12_PASSWORD }}
           TF_VAR_f5xc_api_url: ${{ secrets.f5xc_api_url }}
           TF_VAR_f5xc_api_p12_file: ${{ secrets.f5xc_api_p12_file }}
@@ -202,8 +199,6 @@ jobs:
       - name: Terraform Destroy
         id: destroy
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           VES_P12_PASSWORD: ${{ secrets.VES_P12_PASSWORD }}
           TF_VAR_f5xc_api_url: ${{ secrets.f5xc_api_url }}
           TF_VAR_f5xc_api_p12_file: ${{ secrets.f5xc_api_p12_file }}
