--- a/.github/workflows/module_test.yml
+++ b/.github/workflows/module_test.yml
@@ -148,8 +148,10 @@ jobs:
           TF_VAR_f5xc_api_url: ${{ secrets.f5xc_api_url }}
           TF_VAR_f5xc_api_p12_file: ${{ secrets.f5xc_api_p12_file }}
           TF_VAR_f5xc_api_token: ${{ secrets.f5xc_api_token }}
-          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
           TF_VAR_f5xc_tenant: ${{ secrets.F5XC_TENANT }}
+          TF_VAR_f5xc_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          TF_VAR_gcp_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
         run: terraform apply -auto-approve -no-color
         continue-on-error: false
       - name: Cleanup environment
@@ -203,8 +205,10 @@ jobs:
           TF_VAR_f5xc_api_url: ${{ secrets.f5xc_api_url }}
           TF_VAR_f5xc_api_p12_file: ${{ secrets.f5xc_api_p12_file }}
           TF_VAR_f5xc_api_token: ${{ secrets.f5xc_api_token }}
-          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
           TF_VAR_f5xc_tenant: ${{ secrets.F5XC_TENANT }}
+          TF_VAR_f5xc_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          TF_VAR_gcp_google_credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
         run: terraform destroy -auto-approve -no-color
         continue-on-error: false
       - name: Cleanup environment
