--- a/main.tf.example
+++ b/main.tf.example
@@ -22,6 +22,11 @@ variable "f5xc_tenant" {
   type    = string
 }
 
+variable "f5xc_namespace" {
+  type = string
+  default = "system"
+}
+
 variable "f5xc_api_token" {
   type    = string
 }
@@ -44,7 +49,7 @@ module "gcp_multi_node_single_nic_new_network_new_subnet" {
   source                            = "./modules/f5xc/site/gcp"
   f5xc_api_p12_file                 = var.f5xc_api_p12_file
   f5xc_api_url                      = var.f5xc_api_url
-  f5xc_namespace                    = "system"
+  f5xc_namespace                    = var.f5xc_namespace
   f5xc_tenant                       = var.f5xc_tenant
   f5xc_gcp_cred                     = "ck-gcp-01"
   f5xc_gcp_ce_gw_type               = "single_nic"
