--- a/.github/workflows/module_test.yml
+++ b/.github/workflows/module_test.yml
@@ -10,6 +10,7 @@ jobs:
       - name: Check out repository and submodules
         uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           submodules: recursive
       - name: Checkout support repo
         uses: actions/checkout@v3
