--- a/.github/workflows/module_test.yml
+++ b/.github/workflows/module_test.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Check out repository and submodules
         uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           submodules: recursive
       - name: Checkout support repo
         uses: actions/checkout@v3
@@ -113,6 +114,7 @@ jobs:
       - name: Check out repository and submodules
         uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           submodules: recursive
       - name: Checkout support repo
         uses: actions/checkout@v3
@@ -170,6 +172,7 @@ jobs:
       - name: Check out repository and submodules
         uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           submodules: recursive
       - name: Checkout support repo
         uses: actions/checkout@v3
