--- a/main.tf.example
+++ b/main.tf.example
@@ -47,8 +47,8 @@ variable "f5xc_gcp_zone_names" {
 
 module "gcp_multi_node_single_nic_new_network_new_subnet" {
   source                            = "./modules/f5xc/site/gcp"
-  f5xc_api_p12_file                 = var.f5xc_api_p12_file
   f5xc_api_url                      = var.f5xc_api_url
+  f5xc_api_token                 = var.f5xc_api_token
   f5xc_namespace                    = var.f5xc_namespace
   f5xc_tenant                       = var.f5xc_tenant
   f5xc_gcp_cred                     = "ck-gcp-01"
