--- a/main.tf.example
+++ b/main.tf.example
@@ -31,10 +31,6 @@ variable "f5xc_api_token" {
   type = string
 }
 
-variable "f5xc_gcp_project_id" {
-  type = string
-}
-
 variable "f5xc_gcp_region" {
   type    = string
   default = "us-east1"
@@ -42,7 +38,84 @@ variable "f5xc_gcp_region" {
 
 variable "f5xc_gcp_zone_names" {
   type    = list(string)
-  default = ["us-east1-b"]
+  default = ["us-east1-b", "us-east1-c", "us-east1-d"]
+}
+
+variable "ssh_public_key_file" {
+  type = string
+}
+
+variable "gcp_application_credentials" {
+  type = string
+}
+
+variable "instance_image_name" {
+  type    = string
+  default = "centos7-atomic-20220721105-single-voltmesh-custom"
+}
+
+variable "instance_image_base" {
+  type = object({
+    ingress_gateway        = string
+    ingress_egress_gateway = string
+  })
+  default = {
+    ingress_gateway        = "centos7-atomic-20220721105-single-voltmesh-us"
+    ingress_egress_gateway = "centos7-atomic-20220721105-multi-voltmesh-us"
+  }
+}
+
+variable "instance_image_family" {
+  type    = string
+  default = "centos7-atomic"
+}
+
+variable "f5xc_ce_image_source_url" {
+  type    = string
+  default = "https://storage.googleapis.com/ves-images"
+}
+
+variable "f5xc_ce_image_file_name_suffix" {
+  type    = string
+  default = ".tar.gz"
+}
+
+variable "f5xc_ves_images_base_url" {
+  type    = string
+  default = "https://storage.googleapis.com/ves-images"
+}
+
+variable "gcp_region" {
+  type    = string
+  default = "us-east1"
+  # default = "us-east4"
+}
+
+variable "gcp_zone" {
+  type    = string
+  default = "us-east1-b"
+  # default = "us-east4-b
+}
+
+variable "gcp_project_id" {
+  type = string
+}
+
+variable "owner" {
+  type    = string
+  default = "c_klewar"
+}
+
+locals {
+  f5xc_image_name = format("%s-%s", var.instance_image_name, var.project_suffix)
+}
+
+provider "google" {
+  credentials = file(var.gcp_application_credentials)
+  project     = var.gcp_project_id
+  region      = var.gcp_region
+  zone        = var.gcp_zone
+  alias       = "default"
 }
 
 provider "volterra" {
@@ -52,21 +125,14 @@ provider "volterra" {
   timeout      = "30s"
 }
 
-provider "google" {
-  credentials = var.gcp_application_credentials
-  project     = var.gcp_project_id
-  region      = var.f5xc_gcp_region
-  zone        = var.gcp_zone
-  alias       = "default"
-}
 
 module "gcp_multi_node_single_nic_new_network_new_subnet" {
   source                            = "./modules/f5xc/site/gcp"
   f5xc_tenant                       = var.f5xc_tenant
   f5xc_api_url                      = var.f5xc_api_url
   f5xc_gcp_cred                     = "ck-gcp-01"
-  f5xc_namespace                    = var.f5xc_namespace
   f5xc_api_token                    = var.f5xc_api_token
+  f5xc_namespace                    = var.f5xc_namespace
   f5xc_gcp_region                   = var.f5xc_gcp_region
   f5xc_gcp_site_name                = format("%s-gcp-mn-snic-new-n-new-s-%s", var.project_prefix, var.project_suffix)
   f5xc_gcp_ce_gw_type               = "single_nic"
@@ -75,8 +141,8 @@ module "gcp_multi_node_single_nic_new_network_new_subnet" {
   f5xc_gcp_local_subnet_name        = format("%s-gcp-mn-snic-new-n-new-s-%s", var.project_prefix, var.project_suffix)
   f5xc_gcp_local_network_name       = format("%s-gcp-mn-snic-new-n-new-s-%s", var.project_prefix, var.project_suffix)
   f5xc_gcp_local_primary_ipv4       = "192.168.169.0/24"
-  f5xc_gcp_default_ce_sw_version    = true
   f5xc_gcp_default_ce_os_version    = true
+  f5xc_gcp_default_ce_sw_version    = true
   f5xc_gcp_default_blocked_services = true
   ssh_public_key                    = file(var.ssh_public_key_file)
   providers                         = {
